Базовые сущности Кubernetes ReplicaSet, Deployment, Service, Ingress - ДЗ/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-ms-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: otus-ms-service
                port:
                  number: 80
            path: /
